syntax = "proto3";

service KillmailService {
}

